--- a/_posts/program/2014-09-15-2048like.md
+++ b/_posts/program/2014-09-15-2048like.md
@@ -2,7 +2,7 @@
 layout: post
 title: 正在开发2048like 小游戏
 category: 编程
-tags: cocos2dx+lua
+tags: cocos2dx_lua
 keywords: cocos2dx,lua,编程
 description: 
 ---
