--- a/_posts/Life/2015-03-22-tv.md
+++ b/_posts/Life/2015-03-22-tv.md
@@ -12,7 +12,7 @@ description:
 其他：
 1.abel 同学回家订婚了，可能他是我们宿舍里面最早结婚的一个吧。
 恭喜~~</br>
-2.最近准备列一个年度计划，不能再这么散漫下去了，先从养成好习惯做起吧。
+2.最近准备列一个年度计划，不能再这么散漫下去了，先从养成好习惯做起吧<ios app：微习惯>。
 
 
 	
