--- a/_posts/Life/2015-03-23-lie.md
+++ b/_posts/Life/2015-03-23-lie.md
@@ -9,6 +9,9 @@ description:
 ![](http://image.nationalgeographic.com.cn/2014/0702/20140702022609112.jpg)</br>
 今天遇到骗子了，冒充老板骗钱，MD，算是见识了。
 
+其他:
+今天学习cocos2dx + sqlite3 的操作
+
 
 
 	
