add new book for the annual plan

--- a/_posts/Life/2015-03-24-plan.md
+++ b/_posts/Life/2015-03-24-plan.md
@@ -14,6 +14,8 @@ description:
 1.python核心编程
 2.代码清洁之道
 3.openGL相关的书，等找到了登记在这里
+4.Game Programming Patterns
+5.The.Science.Of.Programming
 
 理财方面：
 1.快教孩子学理财
