--- a/_posts/Life/2015-03-24-plan.md
+++ b/_posts/Life/2015-03-24-plan.md
@@ -16,6 +16,9 @@ description:
 3.openGL相关的书，等找到了登记在这里
 4.Game Programming Patterns
 5.The.Science.Of.Programming
+6.大话设计模式
+7.重读effective c++
+8.c++模板元编程
 
 理财方面：
 1.快教孩子学理财
