--- a/_posts/acm/2015-05-06-hdu1002.md
+++ b/_posts/acm/2015-05-06-hdu1002.md
@@ -6,7 +6,7 @@ tags: acm
 keywords: acm, algorithm
 description: 
 ---
-![春，来了](http://image.nationalgeographic.com.cn/2015/0501/20150501050411178.jpg)
+![冰洞外的滑雪者](http://image.nationalgeographic.com.cn/2015/0501/20150501050411178.jpg)
 
 ```cpp
 #include <iostream>
