--- a/_posts/2014-09-15-2048like.md
+++ b/_posts/2014-09-15-2048like.md
@@ -6,8 +6,7 @@ tags: cocos2dx_lua
 keywords: cocos2dx,lua,编程
 client: Start Bootstrap
 date:2014-09-15
-description: 
----
-最近在做一个类似2048的小游戏，逻辑写的差不多了。</br>
+description: 最近在做一个类似2048的小游戏，逻辑写的差不多了。</br>
 UI还要再改下，然后再接入广告sdk.</br>
 项目地址:<a href="https://github.com/zinbers/2048Like">https://github.com/zinbers/2048Like</a>
+---
