--- a/_posts/program/2015-08-29-diamond.md
+++ b/_posts/program/2015-08-29-diamond.md
@@ -31,9 +31,6 @@ vector< vector<int> > vec;
 #define getRow(wrap) ((wrap >> 8) & 0xff)
 #define getCol(wrap) (wrap & 0xff)
 
-double dis(int x1, int y1, int x2, int y2){
-    return sqrt(pow(x1 - x2, 2) + pow(y1 - y2,2));
-}
 void genDiamond(int row, int col, int width){
     vec.resize(width);
     int dir[4][2] = {
@@ -67,9 +64,8 @@ void genDiamond(int row, int col, int width){
 int main() {
     genDiamond(5,5,3);
     for(int i = 0; i < vec.size(); i++){
-        vector<int> v = vec[i];
-        for(int j = 0; j < v.size(); j++){
-            cout<<"row:"<<getRow(v[j])<<" col:"<<getCol(v[j])<<endl;
+        for(int j = 0; j < vec[i].size(); j++){
+            cout<<"row:"<<getRow(vec[i][j])<<" col:"<<getCol(vec[i][j])<<endl;
         }
     }
     return 0;
