--- a/_posts/Life/2015-11-06-luyouqi.md
+++ b/_posts/Life/2015-11-06-luyouqi.md
@@ -6,14 +6,14 @@ tags: 路由器
 keywords: 极路由，编程器，
 description: 
 ---
-路由器为极路由1s h5661，我的key已丢失，无法恢复，未丢失的同学先备份好。
+路由器为极路由1s h5661，```我的key已丢失，无法恢复，未丢失的同学先备份好。```
 ##1.烧ikuai固件  [http://bbs.ikuai8.com/thread-27906-1-1.html](http://bbs.ikuai8.com/thread-27906-1-1.html)
 遇到的问题如下：
 用ezpxpro 烧录完以后校验数据总是出错，这里可能是电脑usb提供的电压不够5v导致的。
 另外读出芯片和把烧录的文件放进来之后，点击一下烧录器上面的“配置”，配置完成再进行烧录。
 ［多次烧录校验数据失败以后的无意发现，不知道有没有帮助，具体也不清楚为什么，待测］
 ##2.经过上面的步骤应该可以烧写成功了。这一步更换u－boot和固件
-参考：[http://bbs.ikuai8.com/thread-27733-1-1.html](http://bbs.ikuai8.com/thread-27733-1-1.html)
+*参考：[http://bbs.ikuai8.com/thread-27733-1-1.html](http://bbs.ikuai8.com/thread-27733-1-1.html)
 </br>－－－－－－－－－－－－－－</br>
 1、登陆ikuai管理页面
 2、手工输入地址: http://192.168.1.1/sysupgrade.html
@@ -27,11 +27,11 @@ description:
 
 提醒：此uboot是h大的不死uboot，支持华硕，极路由，openwrt等固件，不支持爱快固件。
 
-链接: [http://pan.baidu.com/s/1mgIEwmG](http://pan.baidu.com/s/1mgIEwmG) 密码: ijtd
+*链接: [http://pan.baidu.com/s/1mgIEwmG](http://pan.baidu.com/s/1mgIEwmG) 密码: ijtd
 </br>－－－－－－－－－－－－－－－－－</br>
 
-##3.更换u－boot breed 参考链接： [http://www.right.com.cn/forum/thread-161906-1-1.html](http://www.right.com.cn/forum/thread-161906-1-1.html)
+##3.更换不死u－boot为breed 参考链接： [http://www.right.com.cn/forum/thread-161906-1-1.html](http://www.right.com.cn/forum/thread-161906-1-1.html)
 ##4.剩下就是配置路由器了 192.168.199.1，不要升级极路由固件版本，我升级了一次，breed就进不去了。
 ## 5.刷其他的固件。用putty 连ssh 。登录进去以后输入以下命令：前提是能联网。
 rm -rf tool.sh && wget -c http://www.hiwifimi.com/app/tool.sh && chmod +x tool.sh && ./tool.sh 
-参考链接：[http://www.hiwifimi.com/archives/114](http://www.hiwifimi.com/archives/114)
+*参考链接：[http://www.hiwifimi.com/archives/114](http://www.hiwifimi.com/archives/114)
