--- a/_posts/Life/2015-11-06-luyouqi.md
+++ b/_posts/Life/2015-11-06-luyouqi.md
@@ -15,15 +15,14 @@ description:
 ##2.经过上面的步骤应该可以烧写成功了。这一步更换u－boot和固件
 </br>参考：[http://bbs.ikuai8.com/thread-27733-1-1.html](http://bbs.ikuai8.com/thread-27733-1-1.html)
 </br>－－－－－－－－－－－－－－</br>
-1、登陆ikuai管理页面
-2、手工输入地址: http://192.168.1.1/sysupgrade.html
-3、上传u-boot-mt7620-hiwifi-hc5661.bin文件，升级完后会自动返回升级页面
-4、继续选择升级 recovery.bin ，提示升级成功。
-5、关闭路由拔掉电源，路由器上只在 LAN 口上接入网线，且只能有一根网线接入路由，按住路由上的复位键开机。直到所有 LED 都快速闪烁后，松开复位键，用浏览器访问 192.168.1.1 即可访问不死UBOOT。
-6、选择固件更新，点击固件-选择文件，选择recovery.bin，选择自动重启，点击上传，再点击更新确认。重启后就是官方固件了。
+**1.登陆ikuai管理页面**
 
+**2.手工输入地址: http://192.168.1.1/sysupgrade.html**
 
-
+**3.上传u-boot-mt7620-hiwifi-hc5661.bin文件，升级完后会自动返回升级页面**
+**4.继续选择升级 recovery.bin ，提示升级成功。**
+**5.关闭路由拔掉电源，路由器上只在 LAN 口上接入网线，且只能有一根网线接入路由，按住路由上的复位键开机。直到所有 LED 都快速闪烁后，松开复位键，用浏览器访问 192.168.1.1 即可访问不死UBOOT。**
+**6.选择固件更新，点击固件-选择文件，选择recovery.bin，选择自动重启，点击上传，再点击更新确认。重启后就是官方固件了。**
 
 提醒：此uboot是h大的不死uboot，支持华硕，极路由，openwrt等固件，不支持爱快固件。
 
@@ -32,7 +31,7 @@ description:
 
 ##3.更换不死u－boot为breed 
 </br>参考链接： [http://www.right.com.cn/forum/thread-161906-1-1.html](http://www.right.com.cn/forum/thread-161906-1-1.html)</br>
-##4.剩下就是配置路由器了 192.168.199.1，不要升级极路由固件版本，我升级了一次，breed就进不去了。
+##4.剩下就是配置路由器了,极路由后台地址：[192.168.199.1](192.168.199.1)，不要升级极路由固件版本，我升级了一次，breed就进不去了。
 ## 5.刷其他的固件。用putty 连ssh 。登录进去以后输入以下命令：前提是能联网。
 rm -rf tool.sh && wget -c http://www.hiwifimi.com/app/tool.sh && chmod +x tool.sh && ./tool.sh 
 </br>参考链接：[http://www.hiwifimi.com/archives/114](http://www.hiwifimi.com/archives/114)</br>
