--- a/_posts/acm/2016-06-05-leetcode_193.md
+++ b/_posts/acm/2016-06-05-leetcode_193.md
@@ -8,4 +8,4 @@ description:
 ---
 ##leetcode 193
 ```bash
-ed -n '/^\([0-9]\{3\}-\)\{2\}[0-9]\{4\}$/p;/^([0-9]\{3\}) [0-9]\{3\}-[0-9]\{4\}$/p' file.txt
+sed -n '/^\([0-9]\{3\}-\)\{2\}[0-9]\{4\}$/p;/^([0-9]\{3\}) [0-9]\{3\}-[0-9]\{4\}$/p' file.txt
