--- a/_posts/acm/2016-06-05-leetcode_194.md
+++ b/_posts/acm/2016-06-05-leetcode_194.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 title: Transpose File
-category: acm
-tags: acm
+category: shell
+tags: acm,shell
 keywords: acm, shell
 description: 
 ---
