--- a/_posts/acm/2016-06-11-leetcode_3.md
+++ b/_posts/acm/2016-06-11-leetcode_3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Longest Substring Without Repeating Characters
-category: python acm program
+category: acm
 tags: python acm program
 keywords: python acm program
 description:
