--- a/_posts/acm/2016-06-11-leetcode_4.md
+++ b/_posts/acm/2016-06-11-leetcode_4.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Median of Two Sorted Arrays
-category: acm python program 
+category: acm 
 tags: acm python program
 keywords: acm python program
 description:
