--- a/_posts/program/2016-06-26-tickets.md
+++ b/_posts/program/2016-06-26-tickets.md
@@ -6,7 +6,7 @@ tags: python program
 keywords: program python
 description:
 ---
-###第一步先获取站点名和对应的站点代码
+###先获取站点名和对应的站点代码
 ```bash
 curl --insecure  "https://kyfw.12306.cn/otn/resources/js/framework/station_name.js?station_version=1.8957" | tr '@' '\n' | awk -F"|" '{if (NR > 1){print $2" "$3}}' > city.txt
 ```
