--- a/_posts/program/2016-10-31-cpp_bug.md
+++ b/_posts/program/2016-10-31-cpp_bug.md
@@ -66,10 +66,11 @@ int main(void){
 
 因为t是函数内定义的变量。生存周期为函数体内。
 
-那么t1的生存周期在getTest().ptr这行代码执行完就结束了。
+而t1的生存周期在getTest().ptr这行代码执行完就结束了。
 
 那么p就指向了一个已经析构的对象内部变量。自然就变成了野指针。
 
 `虽然第一段代码块输出没错，有可能是编译器的实现不一样，但代码是错误的`
 
-`第二段代码没有问题，并且编译器对这段代码做了返回值优化[参考链接](http://www.cnblogs.com/xkfz007/articles/2506022.html)`
+`第二段代码没有问题，并且编译器对这段代码做了返回值优化`
+[返回值优化参考链接](http://www.cnblogs.com/xkfz007/articles/2506022.html)
