--- a/_posts/program/2016-10-31-cpp_bug.md
+++ b/_posts/program/2016-10-31-cpp_bug.md
@@ -23,7 +23,7 @@ class Test{
         cout<<"constructor!"<<endl;
       }
       ~Test(){
-        delete ptr;
+        delete[] ptr;
         cout<<"destructor"<<endl;
       }
     public:
