--- a/_posts/acm/2017-05-28-leetcode_152.md
+++ b/_posts/acm/2017-05-28-leetcode_152.md
@@ -6,7 +6,7 @@ tags: acm python program
 keywords: acm python program
 description:
 ---
-![#leetcode 152](https://leetcode.com/problems/maximum-product-subarray/) 
+[#leetcode 152](https://leetcode.com/problems/maximum-product-subarray/) 
 
 ```python
 # -*- coding: utf-8 -*-
