--- a/_posts/acm/2017-05-28-leetcode_152.md
+++ b/_posts/acm/2017-05-28-leetcode_152.md
@@ -5,6 +5,7 @@ category: acm
 tags: acm python program
 keywords: acm python program
 description:
+comments: true
 ---
 [leetcode 152](https://leetcode.com/problems/maximum-product-subarray/) 
 
