--- a/_posts/Life/2015-03-23-lie.md
+++ b/_posts/Life/2015-03-23-lie.md
@@ -4,7 +4,8 @@ title: 骗子
 category: 生活
 tags: 生活
 keywords: 骗子
-description: 
+description:
+comments: true 
 ---
 ![](http://image.nationalgeographic.com.cn/2015/0313/20150313044554697.jpg)</br>
 今天遇到骗子了，冒充老板骗钱，MD，算是见识了。
