--- a/_posts/Life/2015-03-23-lie.md
+++ b/_posts/Life/2015-03-23-lie.md
@@ -7,7 +7,8 @@ keywords: 骗子
 description:
 comments: true 
 ---
-![](http://image.nationalgeographic.com.cn/2015/0313/20150313044554697.jpg)
+
+![image](http://image.nationalgeographic.com.cn/2015/0313/20150313044554697.jpg)
 
 
 今天遇到骗子了，冒充老板骗钱，MD，算是见识了。
